--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -13,11 +13,11 @@
   width: 100%;
   height: 20px;
 }
-
+/*
 #viewDiv {
   height: calc(100vh - 7rem);
   width: 80%;
-}
+}*/
 
 h1{
   text-align: center;
@@ -25,4 +25,86 @@ h1{
 
 p{
   text-align: center;
+}
+
+body {
+    background-color: #2B2E3B;
+}
+
+.navbar {
+    background-color: #2F3241;
+    border-bottom: 1px solid black;
+}
+
+#logo {
+    height: 60px;
+}
+
+i, ion-icon {
+    font-size: 1.8rem;
+}
+
+/*.btn {*/
+    /*height: 60px;*/
+    /*width: 60px;*/
+/*}*/
+
+.btn-outline-primary {
+    color: #9FEAF9;
+    background-color: transparent;
+    border-color: #9FEAF9;
+}
+
+.btn-outline-primary:hover {
+    color: #2F3241;
+    background-color: #9FEAF9;
+    border-color: #9FEAF9;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show>.btn-outline-primary.dropdown-toggle {
+    color: #2F3241;
+    background-color: #9FEAF9;
+    border-color: #9FEAF9;
+}
+
+.btn-outline-primary.focus, .btn-outline-primary:focus {
+    box-shadow: 0 0 0 0.2rem rgba(159,234,249,.5);
+}
+
+/*.row {*/
+    /*border: 1px solid #9FEAF9;*/
+    /*border-radius: 30px;*/
+    /*height: 400px;*/
+    /*-webkit-box-shadow: rgba(39,44,49,.06) 8px 14px 38px, rgba(39,44,49,.03) 1px 3px 8px;*/
+    /*box-shadow: 8px 14px 38px rgba(39,44,49,.06), 1px 3px 8px rgba(39,44,49,.03);*/
+/*}*/
+
+/*.col-6-lg {*/
+    /*width: 570px;*/
+    /*height: 100%*/
+/*}*/
+
+/*.col-6-lg:first-child {*/
+    /*border-right: 1px solid #9FEAF9;*/
+/*}*/
+
+.jumbotron {
+    height: 350px;
+    background-color: #2F3241;
+    border: 1px solid black;
+    -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+}
+
+.card {
+    border: 1px solid black;
+    -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+}
+
+.card-body {
+    background-color: #2F3241;
+    color: white;
 }
