--- a/src/components/Conclusion.css
+++ b/src/components/Conclusion.css
@@ -1,3 +1,4 @@
+@import url('https://js.arcgis.com/4.7/esri/css/main.css');
 .conc {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,4 +15,8 @@
 }
 body{
   background-color: #2B2E3B;
+}
+#viewDiv {
+  height: calc(100vh - 7rem);
+  width: 70%;
 }
