--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,23 +1,49 @@
 @import url('https://js.arcgis.com/4.8/esri/css/main.css');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+
 .about {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: normal;
+    margin-top: 25px;
 }
 
-.alert{
-  background-color: #88C542;
-  width: 100%;
-  height: 20px;
+.jumbotron {
+    background-color: transparent;
+    border: 1px solid black;
+    -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    height: 75vh;
 }
 
-#viewDiv {
-  height: calc(100vh - 7rem);
-  width: 70%;
+.tooltip {
+    position: absolute;
+    pointer-events: none;
+    transition: opacity 200ms;
 }
-body{
-  background-color: #2B2E3B;
+
+.tooltip>div {
+    margin: 0 auto;
+    padding: 12px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.75);
+    transform: translate3d(-50%, -125%, 0);
+    color: white;
+    background-color: #fb6a4a;
+    border: 1px solid #ef3b2c;
+    opacity: 0.95;
 }
+
+.esri-widget__header, .esri-attribution__sources {
+    display: none;
+}
+
+.esri-widget {
+    background-color: transparent;
+}
+
+/*#viewDiv {*/
+    /*height: calc(100vh - 7rem);*/
+    /*width: 70%;*/
+/*}*/
+
