--- a/src/components/mapa.css
+++ b/src/components/mapa.css
@@ -1,28 +1,28 @@
 @import url('https://js.arcgis.com/4.7/esri/css/main.css');
 .map {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
+  font-family: 'Lato', sans-serif;
+  font-weight: normal;
   margin-top: 25px;
 }
 
-.alert{
-  background-color: #F9ED3A;
-  width: 100%;
-  height: 20px;
+.jumbotron {
+  background-color: transparent;
+  border: 1px solid black;
+  -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+  height: 75vh;
 }
 
 svg{
-  margin: 25px;
+    margin: 25px;
 }
 
 path{
-  fill: none;
-  stroke: #76BF8A;
-  stroke-width: 3px;
+    fill: none;
+    stroke: #76BF8A;
+    stroke-width: 3px;
 }
 body{
-  background-color: #2B2E3B;
+    background-color: #2B2E3B;
 }
