--- a/src/components/integracion.css
+++ b/src/components/integracion.css
@@ -1,7 +1,7 @@
 @import url('https://js.arcgis.com/4.7/esri/css/main.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
-.conc {
+.integracion {
     font-family: 'Lato', sans-serif;
     font-weight: normal;
     margin-top: 25px;
