--- a/src/components/mapa.css
+++ b/src/components/mapa.css
@@ -1,28 +1,49 @@
-@import url('https://js.arcgis.com/4.7/esri/css/main.css');
-.map {
-  font-family: 'Lato', sans-serif;
-  font-weight: normal;
-  margin-top: 25px;
+@import url('https://js.arcgis.com/4.8/esri/css/main.css');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+
+.mapa {
+    font-family: 'Lato', sans-serif;
+    font-weight: normal;
+    margin-top: 25px;
 }
 
 .jumbotron {
-  background-color: transparent;
-  border: 1px solid black;
-  -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
-  height: 75vh;
+    background-color: transparent;
+    border: 1px solid black;
+    -webkit-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 30px -5px rgba(0,0,0,0.75);
+    height: 75vh;
 }
 
-svg{
-    margin: 25px;
+.tooltip {
+    position: absolute;
+    pointer-events: none;
+    transition: opacity 200ms;
 }
 
-path{
-    fill: none;
-    stroke: #76BF8A;
-    stroke-width: 3px;
+.tooltip>div {
+    margin: 0 auto;
+    padding: 12px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.75);
+    transform: translate3d(-50%, -125%, 0);
+    color: white;
+    background-color: #fb6a4a;
+    border: 1px solid #ef3b2c;
+    opacity: 0.95;
 }
-body{
-    background-color: #2B2E3B;
+
+.esri-widget__header, .esri-attribution__sources {
+    display: none;
 }
+
+.esri-widget {
+    background-color: transparent;
+}
+
+/*#viewDiv {*/
+    /*height: calc(100vh - 7rem);*/
+    /*width: 70%;*/
+/*}*/
+
