Implementation of D3 charts

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://js.arcgis.com/4.7/esri/css/main.css');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 
 #app {
     font-family: 'Lato', sans-serif;
@@ -22,24 +23,9 @@ body {
     height: 60px;
 }
 
-.btn-outline-primary {
-    color: #FFFFFF;
-    background-color: transparent;
-    border-color: #9FEAF9;
-}
 
-.btn-outline-primary:hover {
-    color: #2F3241;
-    background-color: #9FEAF9;
-    border-color: #9FEAF9;
-}
 
-.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show>.btn-outline-primary.dropdown-toggle {
-    color: #FFFFFF;
-    background-color: #9FEAF9;
-    border-color: #9FEAF9;
-}
 
-.btn-outline-primary.focus, .btn-outline-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(159,234,249,.5);
-}
+
+
+
